--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@ import {
   MessageCircle, 
   Menu, 
   X,
-  ChevronRight,
   Monitor,
   Layers,
   ArrowRight
@@ -258,8 +257,8 @@ export default function App() {
               </Reveal>
             </div>
             
-            {/* Abstract 3D-ish Visual */}
-            <div className="relative hidden lg:block perspective-1000">
+            {/* 3D-ish Visual with Image */}
+            <div className="relative hidden lg:block [perspective:1000px]">
               <Reveal delay={400}>
                 <div className="relative w-full max-w-lg mx-auto">
                    {/* Decorative background blob */}
