--- a/index.html
+++ b/index.html
@@ -319,12 +319,9 @@
                       </Reveal>
                       
                       <Reveal delay={200}>
-                        <p className="text-lg text-stone-600 leading-relaxed max-w-xl mb-4">
-                          Hi, I'm <span className="font-bold text-stone-900">Maria Cristina Garcia</span>. 
-                          I work with brands that want a strong and consistent online presence. I work with both visual builders and code, allowing me to customize websites while also handling content and social media management to support growth and engagement.
-                        </p>
                         <p className="text-lg text-stone-600 leading-relaxed max-w-xl">
-                           I handle website design, front-end development, and social media management, using HTML, CSS, and Liquid when needed, alongside structured content planning for social platforms.
+                          Hi, I'm <span className="font-bold text-stone-900">Maria Cristina Garcia</span>. 
+                          I build strong online brands through custom website design and strategic social media management. Using visual builders, HTML, CSS, and Liquid, I create functional sites and drive engagement with structured content planning.
                         </p>
                       </Reveal>
                       
