--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
               <section id="skills" className="py-24 bg-stone-50 relative overflow-hidden">
                 <div className="absolute top-0 right-0 w-1/3 h-full bg-gradient-to-l from-white to-transparent opacity-50"></div>
                 <div className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
-                  <div className="grid grid-cols-1 lg:grid-cols-2 gap-16">
+                  <div className="flex flex-col gap-16">
                     
                     {/* Platforms */}
                     <Reveal>
@@ -594,11 +594,11 @@
                         </div>
                         Platforms I Use
                       </h3>
-                      <div className="grid grid-cols-2 sm:grid-cols-3 gap-5">
-                        {['Shopify', 'Wix', 'WordPress', 'Square', 'PageFly', 'GitHub', 'Buffer', 'Social Pilot'].map((platform, idx) => (
+                      <div className="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
+                        {['Shopify', 'Wix', 'WordPress', 'Square', 'PageFly', 'GitHub', 'Social Pilot'].map((platform, idx) => (
                           <div 
                             key={platform} 
-                            className="group bg-white rounded-xl p-6 text-center border border-stone-100 shadow-sm hover:shadow-md hover:border-rose-200 hover:-translate-y-1 transition-all duration-300"
+                            className="group bg-white rounded-xl p-4 min-h-[4.5rem] flex items-center justify-center text-center border border-stone-100 shadow-sm hover:shadow-lg hover:border-rose-200 hover:-translate-y-1 transition-all duration-300"
                             style={{ transitionDelay: `${idx * 50}ms` }}
                           >
                             <span className="font-semibold text-stone-600 group-hover:text-rose-500 transition-colors">{platform}</span>
@@ -615,7 +615,7 @@
                         </div>
                         Tools I Use to Deliver Results
                       </h3>
-                      <div className="grid grid-cols-2 sm:grid-cols-2 gap-5">
+                      <div className="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4">
                         {[
                           'Canva', 
                           'Adobe Photoshop', 
@@ -630,7 +630,7 @@
                         ].map((tool, idx) => (
                           <div 
                             key={tool} 
-                            className="group bg-white rounded-xl p-4 text-center border border-stone-100 shadow-sm hover:shadow-md hover:border-orange-200 hover:-translate-y-1 transition-all duration-300 flex items-center justify-center h-full"
+                            className="group bg-white rounded-xl p-4 min-h-[4.5rem] flex items-center justify-center text-center border border-stone-100 shadow-sm hover:shadow-lg hover:border-orange-200 hover:-translate-y-1 transition-all duration-300"
                             style={{ transitionDelay: `${idx * 50}ms` }}
                           >
                             <span className="font-semibold text-stone-600 group-hover:text-orange-500 transition-colors text-sm">{tool}</span>
