--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maria Cristina Garcia | Portfolio</title>
+    
+    <!-- Link Preview Meta Tags -->
+    <meta property="og:title" content="Maria Cristina Garcia | Portfolio" />
+    <meta property="og:description" content="Virtual Assistant & Web Designer specializing in Shopify, Wix, WordPress, and Social Media Management." />
+    <meta property="og:image" content="https://live.staticflickr.com/65535/54906179031_1a643a9fd8_c.jpg" />
+    <meta property="og:url" content="https://mariacristinagarcia.com" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Maria Cristina Garcia | Portfolio" />
+    <meta name="twitter:description" content="Virtual Assistant & Web Designer specializing in Shopify, Wix, WordPress, and Social Media Management." />
+    <meta name="twitter:image" content="https://live.staticflickr.com/65535/54906179031_1a643a9fd8_c.jpg" />
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
